7/14/14 remove erroneous font option from Image constructors in ToolsComboBox
7/14/14 misc doc and formatting
7/14/14 remove unnecessary equation field in nodes that observe equationProperty, get value from equationProperty
7/14/14 GameModel: rename some properties
7/14/14 Game: move challengesPerGame property from view to model
7/14/14 remove coupling between EquationChoiceNode and IntroductionModel
7/14/14 rename IntroductionModel.currentEquation to equation
7/14/14 remove coupling between BoxesNode and models
7/14/14 give GameModel.currentEquation a non-null initial value, to prevent the recurring problems that this had been causing
7/14/14 Game: convert Properties that are not observed to simple fields (currentPoints, attempts, balancedRepresentation, isNewBestTime)
7/14/14 fix in GameView, where current equation is undefined until a level is selected (on startup and on reset)
7/14/14 Game: move timerEnabled property to view
7/14/14 Intro: move balancedRepresentation property from model to view
7/14/14 move view-specific properties out of models (soundEnabled, reactantsBoxExpanded, productsBoxExpanded)
7/14/14 change Equation.balancedAndSimplified from a Property to a field, nothing observes it
7/14/14 #27 change minX for reactant terms to left-edge of box, to fix layout problem with C2H5OH + 3O2 -> 2CO2 + 3H2O
7/14/14 remove weird couplings where HorizontalAligner was providing information about vertical dimension
7/14/14 completed HorizontalAligner refactor
7/14/14 first phase of HorizontalAligner refactor
7/14/14 internal cleanup of HorizontalAligner
7/14/14 fill in correct coefficients only when 'playAll' query parameter is set
7/14/14 encapsulate and document query parameters in BCEQueryParameters
7/14/14 #66 remove 'move' feature from game dialog
# 1.0.0-dev.8 7/11/14
7/11/14 remove erroneous RSC credit, no funding was provided for this sim according to KP