@@ -1,3 +1,4 @@
+7/14/14 #69 update bar charts and balance scales only when they are visible
 7/14/14 remove erroneous font option from Image constructors in ToolsComboBox
 7/14/14 misc doc and formatting
 7/14/14 remove unnecessary equation field in nodes that observe equationProperty, get value from equationProperty
